--- a/src/main/resources/css/output.css
+++ b/src/main/resources/css/output.css
@@ -582,6 +582,14 @@ video {
   display: none;
 }
 
+.h-screen {
+  height: 100vh;
+}
+
+.table-auto {
+  table-layout: auto;
+}
+
 .border-collapse {
   border-collapse: collapse;
 }
@@ -598,6 +606,16 @@ video {
   border-width: 1px;
 }
 
+.border-gray-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity, 1));
+}
+
+.bg-gray-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity, 1));
+}
+
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
@@ -605,6 +623,11 @@ video {
 
 .font-bold {
   font-weight: 700;
+}
+
+.text-blue-500 {
+  --tw-text-opacity: 1;
+  color: rgb(59 130 246 / var(--tw-text-opacity, 1));
 }
 
 .text-blue-600 {
@@ -618,4 +641,17 @@ video {
 
 .outline {
   outline-style: solid;
+}
+
+/* Custom Styles */
+
+.table-auto {
+  width: 100%;
+  text-align: left;
+  margin: 20px auto;
+}
+
+.table-auto th, .table-auto td {
+  padding: 10px;
+  border: 1px solid #ddd;
 }
